Fix Kosovo + simplified generation

--- a/states.yaml
+++ b/states.yaml
@@ -24832,7 +24832,7 @@
 - ID: 802
   albanian: Kosovë
   arab: Kusufu
-  belarusian: Respublika kosava
+  belarusian: Kosavo
   bulgarian: Kosovo
   chinese: Kesuowo
   czech: Kosovo
@@ -24844,7 +24844,7 @@
   french: Kosovo
   german: Prinz
   greek: Kossufopedio
-  hindi: Kosovo Ganaraajy
+  hindi: Kosovo
   hungarian: Koszovó
   italian: Kosovo
   japanese: Kosobo
@@ -24854,7 +24854,7 @@
   polish: Kosowo
   portuguese: Kosovo
   romanian: Kosovo
-  russian: Respublika Kosovo
+  russian: Kosovo
   spanish: Kosovo
   swedish: Kosovo
   turkish: Kosova
