Fix van in Korean

--- a/provinces.yaml
+++ b/provinces.yaml
@@ -16815,7 +16815,7 @@
   hungarian: Van
   italian: Van
   japanese: Ban
-  korean: Seunghabcha
+  korean: Van
   latvian: Van
   lithuanian: Van
   norwegian: Van
