--- a/states.yaml
+++ b/states.yaml
@@ -6918,8 +6918,8 @@
   chinese: Fuerjiagele
   czech: Volgograd
   danish: Volgograd
-  dutch: Volgastad
-  english: Stalingrad
+  dutch: Volgograd
+  english: Volgograd
   estonian: Volgograd
   finnish: Volgograd
   french: Volgograd
@@ -6927,12 +6927,12 @@
   greek: Volgkogkrant
   hindi: Volgograad
   hungarian: Volgográd
-  italian: Volgograd
+  italian: Volgogrado
   japanese: Vuorugogurādo
   korean: Bolgogeuladeu
   latvian: Volgograda
   lithuanian: Volgogradas
-  norwegian: Stalingrad
+  norwegian: Volgograd
   polish: Wołgograd
   portuguese: Volgogrado
   romanian: Volgograd
