--- a/states.yaml
+++ b/states.yaml
@@ -132,7 +132,7 @@
   belarusian: Warminska-Mazurskaya
   bulgarian: Ermland-Masuren
   chinese: Waermi-mazulisheng
-  czech: Ermland-Masuren
+  czech: Varmijsko-mazurské
   danish: Warmian Masuria
   dutch: Ermland-Masuren
   english: Warmian Masuria
@@ -1348,7 +1348,7 @@
   belarusian: Paunocnaja vienhryja
   bulgarian: Nordungarn
   chinese: Hongbei
-  czech: Northern Hungary
+  czech: Severní Maďarsko
   danish: Észak Magyarország
   dutch: Noordelijk Hongarije
   english: Northern Hungary
@@ -2276,8 +2276,8 @@
   belarusian: Olsagebiet
   bulgarian: Zaolzhe
   chinese: Zha'ao'erjie
-  czech: Zaolzie
-  danish: Za Ol I Ie
+  czech: Záolší
+  danish: Zaoliie
   dutch: Zaolzie
   english: Zaolzie
   estonian: Zaolzie
@@ -2820,7 +2820,7 @@
   belarusian: Stanislawow
   bulgarian: Stanisławów
   chinese: Shitannisilaweifu
-  czech: Stanisławów
+  czech: Stanislav
   danish: Ivano Frankivsk
   dutch: Stanislau
   english: Stanisławów
@@ -24388,7 +24388,7 @@
   belarusian: Karalyavec
   bulgarian: Kyonigsberg
   chinese: Kenisibao
-  czech: Königsberg
+  czech: Královec
   danish: Kaliningrad
   dutch: Koningsbergen
   english: Königsberg
@@ -24399,7 +24399,7 @@
   greek: Königsberg
   hindi: Kailininagraad
   hungarian: Königsberg
-  italian: Königsberg
+  italian: Regiomonte
   japanese: Kēnihisuberuku
   korean: Koenihiseubeleukeu
   latvian: Königsberg
