Some corrections for provinces.yaml
Hello, these changes that I've submitted here are minor but they surely are made to more accurately present some of the cities.
Toyohara (meaning "bountiful plain") was the Japanese name for today's Yuzhno-Sakhalinsk (which literally means South Sakhalin City), the Japanese never called it Yujinosaharinsuku before losing the war cause that's just the japanisation of the name the city holds today.
The changes I made to the city of Cluj-Napoca are also historical. The "Napoca" part of the city's name was added in 1974 by the communists because they wished to further solidify the city in Romanian culture, Napoca being the first ever settlement ever build here by the Dacians. Being romanian myself, I couldn't help but be slightly bothered by the modern name placed upon the city in this timeframe. I believe those were the two most important changes I did and believed I needed to provide context behind. Thank you for making this mod as it's something I wished to see in HOI4 for a long time and keep up the good work!

--- a/provinces.yaml
+++ b/provinces.yaml
@@ -15534,7 +15534,7 @@
   norwegian: Kosice
   polish: Kosice
   portuguese: Kosice
-  romanian: Districtul Košice
+  romanian: Košice
   russian: Koshitse
   spanish: Kosice
   swedish: Kosice
@@ -15963,7 +15963,7 @@
   norwegian: Galata
   polish: Galati
   portuguese: Galati
-  romanian: Galati
+  romanian: Galaţi
   russian: Galati
   spanish: Galati
   swedish: Galati
@@ -16005,37 +16005,37 @@
   yugoslav: Detroi
 - Province id: 6711
   StateID: 76
-  albanian: Kluzh-Napoka
-  arab: Kluj nabuka
-  belarusian: Kluz-napoka
-  bulgarian: Kluzh-napoka
-  chinese: Keluri-naboqia
+  albanian: Kluzh
+  arab: Kluj
+  belarusian: Kluz
+  bulgarian: Kluzh
+  chinese: Keluri
   czech: Kluž
-  danish: Cluj Napoca
+  danish: Cluj
   dutch: Klausenburg
   english: Cluj
-  estonian: Cluj-Napoca
-  finnish: Cluj-Napoca
-  french: Cluj-Napoca
+  estonian: Cluj
+  finnish: Cluj
+  french: Cluj
   german: Klausenburg
-  greek: Kloyz-Napoka
+  greek: Kloyz
   hindi: Kluj
   hungarian: Kolozsvár
   italian: Clauseburgo
-  japanese: Kuruju = napoka
-  korean: Keullujinapoka
-  latvian: Kluža-Napoka
-  lithuanian: Klužas-Napoka
+  japanese: Kuruju
+  korean: Keulluji
+  latvian: Kluža
+  lithuanian: Klužas
   norwegian: Cluj
-  polish: Kluż-Napoka
-  portuguese: Cluj-Napoca
-  romanian: Cluj-Napoca
-  russian: Kluzh-Napoka
-  spanish: Cluj-Napoca
-  swedish: Cluj-Napoca
+  polish: Kluż
+  portuguese: Cluj
+  romanian: Cluj
+  russian: Kluzh
+  spanish: Cluj
+  swedish: Cluj
   turkish: Kaloşvar
-  ukrainian: Kluzh-napoka
-  yugoslav: Cluj-Napoca
+  ukrainian: Kluzh
+  yugoslav: Cluj
 - Province id: 6712
   StateID: 50
   albanian: Frajburgu
@@ -29460,7 +29460,7 @@
   norwegian: Dobrich
   polish: Dobricz
   portuguese: Dobrich
-  romanian: Dobrici
+  romanian: Bazargic
   russian: Dobrich
   spanish: Dobrich
   swedish: Dobritj
@@ -29526,7 +29526,7 @@
   norwegian: Pecs
   polish: Pecz
   portuguese: Pécs
-  romanian: Pécs
+  romanian: Peci
   russian: Pech
   spanish: Pécs
   swedish: Pécs
@@ -32390,7 +32390,7 @@
   hindi: Toyohaara
   hungarian: Juzsno-Szahalinszk
   italian: Južno-Sachalinsk
-  japanese: Yujinosaharinsuku
+  japanese: Toyohara
   korean: Yujeunosahallinseukeu
   latvian: Južnosahaļinska
   lithuanian: Južno Sachalinskas
